notebooks and model

--- a/spy_code/notebooks/update.ipynb
+++ b/spy_code/notebooks/update.ipynb
@@ -73,37 +73,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_curvatures_from_dl_v3(dl_segment, d, L0_seg, AXIAL_ACTION_SCALE=1.0):\n",
-    "    ux = 0.0\n",
-    "    uy = 0.0\n",
+    "def calculate_curvatures_from_dl_v4(dl_segment, d, L0_seg, AXIAL_ACTION_SCALE=1.0):\n",
+    "\n",
+    "    ux_calc = 0.0\n",
+    "    uy_calc = 0.0\n",
+    "\n",
+    "    if abs(d) < 1e-9:\n",
+    "        print(\"[警告] calculate_curvatures_from_dl_v3: 缆绳距离 'd' 接近于零。\")\n",
+    "        return ux_calc, uy_calc\n",
+    "\n",
+    "    # 物理缆绳的长度变化\n",
+    "    dl_l1 = dl_segment[0] # 物理 l1 @ 150 deg\n",
+    "    dl_l2 = dl_segment[1] # 物理 l2 @ 270 deg\n",
+    "    dl_l3 = dl_segment[2] # 物理 l3 @ 30 deg\n",
+    "\n",
+    "    # 映射到标准0,120,240度公式的输入\n",
+    "    # Standard Cable 1 (0 deg) -> effective_dl_c1\n",
+    "    # Standard Cable 2 (120 deg) -> effective_dl_c2\n",
+    "    # Standard Cable 3 (240 deg) -> effective_dl_c3\n",
+    "    effective_dl_c1 = dl_l3  # 物理 l3 (30 deg)\n",
+    "    effective_dl_c2 = dl_l1  # 物理 l1 (150 deg)\n",
+    "    effective_dl_c3 = dl_l2  # 物理 l2 (270 deg)\n",
     "\n",
     "\n",
-    "    dl1 = dl_segment[0]\n",
-    "    dl2 = dl_segment[1]\n",
-    "    dl3 = dl_segment[2]\n",
+    "    avg_dl_effective = (effective_dl_c1 + effective_dl_c2 + effective_dl_c3) / 3.0\n",
+    "    avg_dl_physical = (dl_l1 + dl_l2 + dl_l3) / 3.0\n",
+    "    L_current_estimate = L0_seg + avg_dl_physical * AXIAL_ACTION_SCALE\n",
     "\n",
-    "    # 根据平均 dl 和比例因子估计当前长度 L\n",
-    "    avg_dl = (dl1 + dl2 + dl3) / 3.0\n",
-    "    L_current_estimate = L0_seg + avg_dl * AXIAL_ACTION_SCALE\n",
+    "    if abs(L_current_estimate) < 1e-9:\n",
+    "        print(f\"[警告] calculate_curvatures_from_dl_v3: 当前估计长度 'L_current_estimate' ({L_current_estimate:.4f}) 接近于零。\")\n",
+    "        return 0.0, 0.0\n",
     "\n",
-    "    # 使用当前估计长度计算分母部分 L*d\n",
     "    Ld = L_current_estimate * d\n",
     "\n",
-    "    # 计算 ux (绕 y 轴弯曲)\n",
     "    ux_denominator = Ld * math.sqrt(3.0)\n",
     "    if abs(ux_denominator) > 1e-9:\n",
-    "        ux = (dl3 - dl2) / ux_denominator\n",
+    "        ux_calc = (effective_dl_c3 - effective_dl_c2) / ux_denominator\n",
+    "        # ux_calc = (dl_l2 - dl_l1) / ux_denominator\n",
     "    else:\n",
-    "        ux = 0.0\n",
+    "        ux_calc = 0.0\n",
     "\n",
-    "    # 计算 uy (绕 x 轴弯曲)\n",
     "    uy_denominator = 3.0 * Ld\n",
     "    if abs(uy_denominator) > 1e-9:\n",
-    "         uy = (2.0 * dl1 - dl2 - dl3) / uy_denominator\n",
+    "        uy_calc = (2.0 * effective_dl_c1 - effective_dl_c2 - effective_dl_c3) / uy_denominator\n",
+    "        # uy_calc = (2.0 * dl_l3 - dl_l1 - dl_l2) / uy_denominator\n",
     "    else:\n",
-    "         uy = 0.0\n",
-    "\n",
-    "    return ux, uy\n"
+    "        uy_calc = 0.0\n",
+    "    return ux_calc, uy_calc"
    ]
   },
   {
